x86: Reject target("no-general-regs-only")

Reject target("no-general-regs-only") pragma and attribute.

gcc/

	PR target/96802
	* config/i386/i386-options.c (ix86_valid_target_attribute_inner_p):
	Reject target("no-general-regs-only").

gcc/testsuite/

	PR target/96802
	* gcc.target/i386/pr96802-1.c: New test.
	* gcc.target/i386/pr96802-2.c: Likewise.